--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -62,17 +62,16 @@ The department will check student records to ensure completion of course prerequ
 
 How can we use information to make predictions about uncertain events?
 This course is about empiricism (basing theories on observed data) and judgment, prediction, and decision making in the context of uncertainty.
-Students will be introduced to modern analytical techniques used to make informed predictions, test theories, and draw conclusions from a given dataset.
 But this is no ordinary course...
 
 Rather than memorizing these empirical approaches in abstraction, students will employ these methods in the active, immersive, hands-on learning laboratory of Fantasy Football.
 In this way, the course will weave together two contiguous threads: an introductory overview of data analysis techniques, and a captivating application of these techniques through a semester-long experience in Fantasy Football with their classmates.[^adapted]
 
 The class involves reading primary source material, applying statistical programming (using `R` software), conducting data analysis, and composing written work on a weekly basis.
+Students will be introduced to modern analytical techniques used to make informed predictions, test theories, and draw conclusions from a given dataset.
 
-To be clear, <u>this is a statistics and empiricism course</u>.
-It merely uses fantasy football as a lens and application through which to learn about statistics and empiricism.
-The class does not assume that students know anything about (or care about) football or fantasy football.
+The course uses fantasy football as a lens and application through which to learn about statistics and empiricism.
+The class does not assume that students know anything about football or fantasy football.
 The class is welcome to all, assuming the student meets the prerequisites and that they are interested in learning about empiricism (basing theories on observed data), statistics, and judgment, prediction, and decision making in the context of uncertainty.
 
 Take this class if:
