--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -58,6 +58,10 @@ This course requires successful completion (C- or higher) of any of the followin
 PSY 2811, PSQF 1020, PSQF 4143, STAT 1010, STAT 1015, STAT 1020, STAT 1030, STAT 3510, STAT 4143.
 The department will check student records to ensure completion of course prerequisites.
 
+# Fulfilling Your Academic Requirements {#academicRequirements}
+
+If you are using this course as a second cognate for the B.S. requirements, please see your academic advisor.
+
 # Description of Course {#description}
 
 How can we use information to make predictions about uncertain events?
