--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -109,48 +109,24 @@ Thus, it provides a unique domain to evaluate—and improve—the accuracy of va
 By the end of the course, successful students will be able to:
 
 1. Think critically and empirically about human behavior and performance
-  - Apply empirical inference and appreciate the value it provides over speculative supposition.
-  - Provide well-reasoned guidance for decision-making in conditions of uncertainty.
-  - Describe ways that human judgment and decision making tends to be flawed, including common heuristics and cognitive biases and how to mitigate them analytically.
-  - Engage in critical thinking about causality, including devising plausible alternative explanations for observed effects.
-  - Apply key concepts in causal inference including confounding, causal pathways, and counterfactuals.
-  - Describe the strengths and weaknesses of humans versus computers in prediction scenarios.
+  - Apply empirical inference and articulate its advantages over speculative supposition.
+  - Provide well-reasoned guidance for decision-making under conditions of uncertainty.
+  - Describe common flaws in human judgment and decision making, including heuristics and cognitive biases, and explain how they can be mitigated analytically.
+  - Critically evaluate causal claims by generating plausible alternative explanations.
+  - Apply core concepts in causal inference, including confounding, causal pathways, and counterfactuals.
+  - Compare the strengths and limitations of human and machine approaches to prediction.
 1. Make sense of big data
-  - Apply basic skills in statistical programming using `R` to manipulate and summarize large datasets.
+  - Apply foundational skills in statistical programming using `R` to combine, manipulate, clean, and summarize large datasets.
 1. Use, evaluate, and interpret statistical analyses
-  - Apply basic skills in statistical programming using `R` to conduct data analyses.
-  - Critically evaluate the strengths and limitations of different statistical models and methodologies used in predicting uncertain events, enhancing their understanding of statistical inference and model selection.
-  - Use various analytical techniques for predicting the outcome of uncertain events, and for uncovering latent causes of patterns in observed data.
-  - Interpret findings from various statistical approaches and evaluate the accuracy of predictions.
-  - Engage in iterative problem-solving processes, refining analytical approaches based on feedback and outcomes, and adapting strategies accordingly.
+  - Conduct data analyses using `R`, including appropriate application of statistical models.
+  - Critically evaluate the strengths and limitations of statistical models and methods used for predicting uncertain events.
+  - Apply analytical techniques to predict outcomes and uncover latent causes in observed data.
+  - Interpret results from statistical analyses and evaluate the accuracy of predictions.
+  - Engage in iterative problem-solving, refining analytical strategies based on results and feedback.
   - Use practical analytical skills that can be applied in future research and job settings.
 1. Communicate data-driven insights effectively
-  - Communicate statistical findings and analyses in both written and oral formats, demonstrating proficiency in presenting complex information to diverse audiences.
-  - Generate effective data visualizations.
-
-
-
-
-
-
-
-
-- Apply empirical inference and appreciate the value it provides over speculative supposition.
-- Provide well-reasoned guidance for decision-making in conditions of uncertainty.
-- Describe ways that human judgment and decision making tends to be flawed, including common heuristics and cognitive biases and how to mitigate them analytically.
-- Engage in critical thinking about causality, including devising plausible alternative explanations for observed effects.
-- Apply key concepts in causal inference including confounding, causal pathways, and counterfactuals.
-- Think empirically about human behavior and performance.
-- Describe the strengths and weaknesses of humans versus computers in prediction scenarios.
-- Apply basic skills in statistical programming using `R` to manipulate and summarize datasets and to conduct data analysis.
-- Generate effective data visualizations.
-- Critically evaluate the strengths and limitations of different statistical models and methodologies used in predicting uncertain events, enhancing their understanding of statistical inference and model selection.
-- Use various analytical techniques for predicting the outcome of uncertain events, and for uncovering latent causes of patterns in observed data.
-- Interpret findings from various statistical approaches and evaluate the accuracy of predictions.
-- Engage in iterative problem-solving processes, refining analytical approaches based on feedback and outcomes, and adapting strategies accordingly.
-- Communicate statistical findings and analyses in both written and oral formats, demonstrating proficiency in presenting complex information to diverse audiences.
-- Make sense of big data.
-- Use practical analytical skills that can be applied in future research and job settings.
+  - Communicate statistical findings clearly and accurately in both written and oral formats.
+  - Create effective data visualizations that enhance understanding of data or analytical results.
 
 # Textbook {#textbook}
 
