--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -204,7 +204,7 @@ As part of the class, you will post blog articles (see the [course schedule](#ou
 <u>The blog articles are public</u>; <u>do not take this course if you do not feel comfortable posting blog articles with your full name in a public forum</u>.
 There will be a penalty of 20% for all blog articles turned in late.
 Your lowest score will be dropped.
-A blog article is not considered "submitted" until you (a) post the blog article so that it is live and publicly available, AND (b) submit the assignment on [ICON](https://icon.uiowa.edu) with the URL link to your blog article.
+A blog article is not considered "submitted" until you (a) post the blog article so that it is live and publicly available, AND (b) submit the assignment on [ICON](https://icon.uiowa.edu) with a PDF of the article and a URL link to your blog article.
 All blog articles should be submitted to [ICON](https://icon.uiowa.edu) by 11:59 p.m. on the due date.
 
 You are encouraged to submit your blog article <u>well before</u> the deadline.
