--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -169,9 +169,15 @@ All students in CLAS courses are expected to abide by the [college's standards o
 Academic misconduct must be reported by instructors to CLAS according to [these procedures](https://policy.clas.uiowa.edu/clas-policies-and-procedures/undergraduate-education/academic-misconduct-undergraduate).
 Please note that collaboration with other classmates is not permitted for <u>quizzes, writing assignments (except for troubleshooting `R` errors), and during exams</u>.
 However, I do encourage you to collaborate with classmates to to learn `R`, statistics, and programming, to troubleshoot an error you run into, and to *prepare* for exams (e.g., informal study groups).
+
+## On the Use of Artificial Intelligence {#ai}
+
 Because writing, analytical, and critical thinking skills are part of the learning outcomes of this course, all work submitted by students should be prepared by the student.
-Developing strong competencies in these domains will prepare you for a competitive workplace.
-Therefore, AI-generated submissions are not permitted and will be treated as plagiarism.
+You are training these cognitive muscles; if you go to the gym, you would not have AI lift the weights for you.
+For these reasons, AI-generated submissions are not permitted and will be treated as plagiarism.
+Learning these core foundational skills will make you a better user of AI in the future, because you will be better-positioned to critically evaluate its responses and to determine when its responses are inaccurate.
+Moreover, in many industries, use of AI is not permitted because you cannot share the company's proprietary information.
+Thus, developing strong competencies (without the use of AI) in these domains will prepare you for a competitive workplace.
 
 # Course Requirements and Policies {#requirements}
 
