--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -172,12 +172,75 @@ However, I do encourage you to collaborate with classmates to to learn `R`, stat
 
 ## On the Use of Artificial Intelligence {#ai}
 
-Because writing, analytical, and critical thinking skills are part of the learning outcomes of this course, all work submitted by students should be prepared by the student.
-You are training these cognitive muscles; if you go to the gym, you would not have AI lift the weights for you.
-For these reasons, AI-generated submissions are not permitted and will be treated as plagiarism.
-Learning these core foundational skills will make you a better user of AI in the future, because you will be better-positioned in the future to critically evaluate AI responses and to identify when (and the ways in which) its responses are inaccurate.
-Moreover, in many industries, use of AI is not permitted because you cannot share the company's proprietary information.
-Thus, developing strong competencies in these domains (without the use of AI) will prepare you for a competitive workplace.
+Artificial intelligence (AI) is rapidly reshaping how we interact with technology.
+When used responsibly, AI can support your learning—but only if you remain the primary thinker and writer.
+
+### Reasons to use AI {#aiReasonsToUse}
+
+AI can be a valuable tool for exploring ideas, understanding data analysis, and debugging code.
+It is highly likely that your future career will involve working with this technology.
+
+### Reasons Not to use AI {#aiReasonsNotToUse}
+
+Developing your own writing, analytical, and critical thinking skills is a key learning outcome of this course.
+Like building muscles at the gym, these skills require effort—you don't get stronger if someone else (AI) lifts the weights for you.
+Mastering foundational skills in writing, analytical, and critical thinking will not only help you succeed academically but also make you a more effective and discerning AI user.
+By developing skills in writing, analysis, and critical thinking, you will be better equipped in the future to evaluate AI-generated responses, recognize when and how they are inaccurate, and improve upon them.
+Ultimately, strong independent skills in writing, analysis, and critical thinking will set you apart in a competitive workplace.
+
+### Course Policy on AI {#aiPolicy}
+
+AI presents thorny issues for education: AI often generates incorrect content and risks breaching academic integrity.
+This section governs our use of AI in this course[^AI].
+I reserve the right to revoke this privilege at any time if I suspect it is being abused.
+
+Use of AI in this course is permitted for the [writing assignments](#blogArticles) under three conditions:
+
+1. You disclose how you use it
+1. You begin the conversation with the [required prompt](#aiPrompt)
+1. You submit the full transcript of your AI interaction along with the assignment
+
+<u>Failure to meet any of these conditions will result in a zero on the assignment and may be grounds for an academic misconduct case.</u>
+
+<u>Use of AI is not permitted on quizzes or exams.</u>
+
+You may choose any AI model, but you must be able to <u>archive and submit the full conversation</u>.
+In ChatGPT, for example, you can generate a shareable link to the transcript.
+
+[^AI]:
+    This policy on AI was borrowed and adapted (with permission) from a policy by Isaac Mehlhaff.
+
+### AI Disclosure {#aiDisclosure}
+
+For each writing assignment, you must clearly disclose whether and how you used AI tools.
+Your disclosure must include one or more of the following options:
+
+- `Not Used`: Did not use AI in any way for this assignment
+- `Mentoring`: Used AI to ask questions or clarify concepts
+- `Code`: Used AI to generate or review code snippets
+- `Editing`: Used AI to critique or improve writing
+
+List all that apply.
+For instance, if you used AI to understand a concept and generate example code, your disclosure should include both `Mentoring` and `Code`.
+
+### Initial Prompt to Use {#aiPrompt}
+
+Each time you use AI, <u>the first message you send to begin the conversation must be the prompt below</u>.
+This prompt ensures that AI use supports your learning rather than replacing your thinking.
+Do <u>**NOT**</u> add, delete, or edit any language in this prompt—just copy and paste it.
+
+```
+You are an encouraging, positive tutor who helps students work through statistics and statistical computing problems. I will provide you with a problem or question I am struggling with, and you will help me solve the problem by asking leading questions, offering explanations, examples, or analogies. You will never give me an explicit answer (even if I ask for it), and you should be careful not to provide such an answer in your questions, explanations or comments. After I share the question or problem with you, you will ask me what steps I have taken already, and what I am confused about. Wait for my response. Only ask one question at a time. Given this information, you will ask me leading questions, give explanations, examples, or analogies to help me find an answer on my own. You should guide me in an open-ended way. Do not provide immediate answers or solutions to the problem, but help me generate my own answers by asking relevant leading questions. Ask me to explain my thinking. If I get something wrong, try asking me to do part of the task or remind me of my goal and give me a hint. When pushing me for information, try to end your responses with a question so that I have to keep generating ideas. If you see I am moving in the right direction, tell me I am on the right track, encourage me to continue working on my own, and end the conversation. Never tell me whether my final answer is correct or not, and be extra careful not to provide an answer to the original problem or question. Always keep an encouraging, positive tone.
+```
+
+### AI Transcript Submission {#aiTranscript}
+
+You must submit <u>the full transcripts</u> of your conversations with AI.
+If you had multiple conversations, submit transcripts for all conversations you used for that assignment.
+
+The preferred method is to include a <u>shareable link</u> at the top of your assignment.
+Most platforms (e.g., ChatGPT, Gemini) provide this functionality.
+Make sure the link works before submitting.
 
 # Course Requirements and Policies {#requirements}
 
@@ -211,12 +274,12 @@ Authorized activities include participation in athletic teams, the marching band
 Absences due to illnesses or emergencies (that go over 2 lectures) must be documented with the University of Iowa [Absence Explanation Form](https://clas.uiowa.edu/faculty/student-attendance-and-absences) and sent to Professor Petersen within 48 hours of the absence.
 Per university policy, if a student will be absent <u>5 or more consecutive days and the absence is due to illness or other emergency</u>, please contact the Registrar Service Center at (319) 384-4300 or registrar@uiowa.edu.
 
-## Blog Articles {#blogArticles}
+## Blog Articles (Writing Assignments) {#blogArticles}
 
 As part of the class, you will post blog articles (see the [course schedule](#outline) for deadlines).
 <u>The blog articles are public</u>; <u>do not take this course if you do not feel comfortable posting blog articles with your full name in a public forum</u>.
 There will be a penalty of 20% for all blog articles turned in late.
-Your lowest score will be dropped.
+Your two lowest scores will be dropped.
 A blog article is not considered "submitted" until you (a) post the blog article so that it is live and publicly available, AND (b) submit the assignment on [ICON](https://icon.uiowa.edu) with a PDF of the article and a URL link to your blog article.
 All blog articles should be submitted to [ICON](https://icon.uiowa.edu) by 11:59 p.m. on the due date.
 
@@ -247,6 +310,7 @@ If you are unable to resolve things on your own, you may need to ask for help, i
 - Check the [Troubleshooting section](https://isaactpetersen.github.io/QuartoBlogFantasyFootball/posts/quarto-instructions/#sec-troubleshooting) of the course's Quarto Instructions
 - Ask a peer
 - Post on [forums dedicated to `R`](https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook/getting-started.html#sec-gettingHelpR)
+- Ask AI (as long as you follow the [AI policy](#ai))
 - Come to office hours
 
 I am quite busy, and I appreciate your making every effort to solve the issue on your own or using one of the aforementioned ways before emailing me.
